--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "lint": "eslint src",
-    "test": "jest"
+    "test": "NODE_ENV=test jest"
   },
   "keywords": [
     "jest",
@@ -26,6 +26,9 @@
     "url": "git@github.com/jest-community/jest-watch-toggle-coverage"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
@@ -41,5 +44,29 @@
   },
   "dependencies": {
     "jest": "^23.1.0"
+  },
+  "babel": {
+    "env": {
+      "test": {
+        "presets": [
+          ["env", { "modules": "commonjs" }]
+        ]
+      }
+    },
+    "presets": [
+      [
+        "env",
+        {
+          "modules": false,
+          "useBuiltIns": "usage"
+        }
+      ]
+    ]
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx$": "babel-jest",
+      "^.+\\.js$": "babel-jest"
+    }
   }
 }
