Tests locally watch plugin

--- a/package.json
+++ b/package.json
@@ -71,6 +71,9 @@
     ]
   },
   "jest": {
+    "watchPlugins": [
+      "./src/index"
+    ],
     "transform": {
       "^.+\\.jsx$": "babel-jest",
       "^.+\\.js$": "babel-jest"
