--- a/package.json
+++ b/package.json
@@ -56,7 +56,12 @@
     "env": {
       "test": {
         "presets": [
-          ["env", { "modules": "commonjs" }]
+          [
+            "env",
+            {
+              "modules": "commonjs"
+            }
+          ]
         ]
       }
     },
